# AgendaAnalytics

./: CONTRIBUTORS.yaml  README.md
application/AgendaAnalytics-MapServer/: .gitignore  CONTRIBUTORS.yaml  LICENSE  LICENSES_thirdparty  README.rst  docker-compose.yml
services/AgendaAnalytics-AgendaMatching/: .env  .gitignore  LICENSE_thirdparty  README.rst  docker-compose.yaml  service.sh
services/AgendaAnalytics-Commons/: .env  .gitignore  (+3 more)
services/AgendaAnalytics-FileServer/: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  LICENSE_thirdparty  README.rst  docker-compose.yml  prestart.sh  prisma_generate_client.ps1  prisma_generate_client.sh  pyproject.toml  service.sh  tests-start.sh
services/AgendaAnalytics-FileServer/app/: backend_pre_start.py  main.py
services/AgendaAnalytics-FileServer/app/api/: deps.py
services/AgendaAnalytics-FileServer/app/api/api_v1/: api.py
services/AgendaAnalytics-FileServer/app/api/api_v1/endpoints/: files.py
services/AgendaAnalytics-FileServer/app/core/: config.py  exceptions.py
services/AgendaAnalytics-FileServer/app/db/: crud_repository.py  file_repository.py
services/AgendaAnalytics-FileServer/app/db/seaweedfs/: file_repository.py  master.py
services/AgendaAnalytics-FileServer/app/schemas/: schema.prisma  seaweed_file.py
services/AgendaAnalytics-FileServer/app/tests/: conftest.py  pytest.ini
services/AgendaAnalytics-FileServer/app/tests/db/seaweedfs/: test_file_repository.py  test_master.py
services/AgendaAnalytics-FileServer/mongo-entrypoint/: 100-create-replica-set.js  200-create-mongokyb-user.js
(+192 files in other folders)
