[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["team@agenda-analytics.de"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.3"
fastapi = "^0.85"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^8.0.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^3.0.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
geojson = "^2.5.0"
httpx = "^0.22"
requests = "^2.26.0"
pymongo = "^4.0.1"
prisma = "^0.6.3"
avro-python3 = "^1.10.2"
confluent-kafka = "^1.9.0"
streaming-form-data = "^1.11.0"
opentelemetry-api = "^1.10.0"
starlette = "^0.20"
prometheus-fastapi-instrumentator = "^5.9.1"
opentelemetry-exporter-otlp = "^1.10."
opentelemetry-instrumentation-fastapi = ""
opentelemetry-instrumentation-logging = ""
pytest = "^6.2"
asgi-lifespan = ""
asgiref = ""
docker = ""


[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.8b0"
isort = "^5.9.3"
autoflake = "^1.3.1"
pytest = "^6.2.5"
pytest-cov = "^2.8.1"
pytest-dependency = "^0.5.1"
pytest-order = "^1.0.0"
types-requests = "^2.25.6"
pytest-asyncio = "^0.16.0"
asgi-lifespan = "^1.0.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

